--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <div class="container flex justify-between items-center mx-auto">
         <div class="flex flex-wrap-reverse md:flex-nowrap">
             <!-- item left -->
-            <nav class="inline-block lg:mr-24 lg:w-4 fixed left-precentage hidden xl:block" data-aos="fade-right" data-aos-duration="1000">
+            <nav class="inline-block lg:mr-24 lg:w-4 fixed left-precentage hidden xl:block" data-aos="fade-right"
+                data-aos-duration="1000">
                 <div class="absolute left-50 transform -translate-x-1/2 space-y-6 mt-20 ml-8">
                     <a href="#" class="nav-dot selected-circle block w-7 h-7 rounded-full border-4 border-nav bg-body">
                         <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">Home</span>
@@ -83,9 +84,10 @@
                 </div>
             </nav>
 
-            <div class="relative flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
+            <div class="relative flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36"
+                data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                 <div class="circle w-1/2 h-1/2 max-w-2xl rounded-full absolute z-1"></div>
-                    <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-2 md:mt-0">Muhammad
+                <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-2 md:mt-0">Muhammad
                     <br> Bilal
                 </h1>
                 <h2 class="text-lg font-semibold w-64 md:w-96 text-center md:text-left mt-0 md:mt-5">
@@ -103,21 +105,23 @@
                 </a>
             </div>
             <!-- mobile -->
-            <img src="public/img/profile.webp" class="block md:hidden w-full md:w-1/2 md:h-2/5" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
+            <img src="public/img/profile.webp" class="block md:hidden w-full md:w-1/2 md:h-2/5" data-aos="fade-right"
+                data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
         </div>
         <!-- dekstop -->
         <img src="public/img/profile.webp" class="hidden md:block w-full md:w-1/2 md:h-2/5 mt-8" data-aos="fade-left">
     </div>
 
     <!-- project -->
-    <div
-        class="container relative mt-20 md:mt-52 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="fade-up">
+    <div class="container relative mt-20 md:mt-52 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+        data-aos="fade-up">
         <section class="w-full">
             <div class="hidden md:block circle circle-2 absolute z-1"></div>
             <h2 class="secondary-title" id="project">My Projects</h2>
             <p class="section-paragraph">I did several projects during my spare times.</p>
             <!-- web -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up"
+                data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
                     <div class="bg-white rounded-lg overflow-hidden mb-10">
                         <img src="public/img/besmarLanding.webp" alt="image" class="w-full" />
@@ -139,7 +143,8 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                A learning platform made to enhance students and teachers doing their activities in this era of the COVID-19 pandemic.
+                                A learning platform made to enhance students and teachers doing their activities in this
+                                era of the COVID-19 pandemic.
                             </p>
                             <div class="flex flex-wrap gap-1">
                                 <a href=""
@@ -173,7 +178,8 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-12">
-                                e bimble is made to make it easier for Database management system enhancement for users to process data on students and
+                                e bimble is made to make it easier for Database management system enhancement for users
+                                to process data on students and
                                 teachers who are learning and teaching, which is used to collect data
                             </p>
                             <div class="flex pb-1 gap-1">
@@ -206,7 +212,8 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                Enhances coffee shops to perform business marketing and make it easier for customers to find suitable coffee shops.
+                                Enhances coffee shops to perform business marketing and make it easier for customers to
+                                find suitable coffee shops.
                             </p>
                             <div class="mb-2">
                                 <a href=""
@@ -281,7 +288,8 @@
             </div>
             <!-- android -->
             <p class="text-xl font-bold" data-aos="fade-up" data-aos-duration="1000">Android</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up"
+                data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
                     <div class="bg-white rounded-lg overflow-hidden mb-10">
                         <img src="public/img/besmartAndroid.webp" alt="image" class="w-full shadow-xl" />
@@ -358,7 +366,8 @@
 
             <!-- data science -->
             <p class="text-xl font-bold" data-aos="fade-up" data-aos-duration="1000">Data Science</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up"
+                data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
                     <div class="bg-white rounded-lg overflow-hidden mb-10">
                         <img src="public/img/covid.webp" alt="image" class="w-full" />
@@ -383,7 +392,7 @@
                                 I made observations using the time series to predict how covid will be in the next year
                             </p>
                             <div class="flex justify-center">
-                                <a href="https://colab.research.google.com/drive/1v9TCIFnkha8ZmVVjnwquchjprhkhGZou"
+                                <a href="https://colab.research.google.com/drive/1v9TCIFnkha8ZmVVjnwquchjprhkhGZou?usp=sharing"
                                     target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
@@ -411,9 +420,10 @@
                                     Titanic
                                 </a>
                             </h3>
-                            <p class="text-base text-body-color leading-relaxed mb-5">Click to find out about how to boost machine learning accuracy, even with similar methods!</p>
+                            <p class="text-base text-body-color leading-relaxed mb-5">Click to find out about how to
+                                boost machine learning accuracy, even with similar methods!</p>
                             <div class="flex justify-center">
-                                <a href="https://colab.research.google.com/drive/1pFptTxQERSteVQT4qF1Fqhrb_tDW-z-B#scrollTo=996CY7ePxru2"
+                                <a href="https://colab.research.google.com/drive/1pFptTxQERSteVQT4qF1Fqhrb_tDW-z-B?usp=sharing"
                                     target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
@@ -445,8 +455,7 @@
                                 I created a program to quickly trace images by using the python programming language
                             </p>
                             <div class="flex justify-center">
-                                <a href=""
-                                    target="_blank"
+                                <a href="https://github.com/muhBilal/trace-image" target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
                             </div>
@@ -477,8 +486,7 @@
                                 I created a program to trace convert images to ascii code by using python
                             </p>
                             <div class="flex justify-center">
-                                <a href="https://colab.research.google.com/drive/1NpvYhwUgBuAnMfTMyU6cIvBWPUOlKuH7#scrollTo=WJS7jVrZKtvr"
-                                    target="_blank"
+                                <a href="" target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
                             </div>
@@ -511,7 +519,7 @@
                                         data 82% </i> </b>
                             </p>
                             <div class="flex justify-center">
-                                <a href="https://colab.research.google.com/drive/1EvZezUShOoJDgZOz7cDiTZjiu6n6k7r8#scrollTo=996CY7ePxru2"
+                                <a href="https://colab.research.google.com/drive/1tY0jfVHg8ksXyxuZs43cPIlPHIrhRxAa?usp=sharing"
                                     target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
@@ -543,7 +551,7 @@
                                 By K-means, I clustered my classmates's academic performance just for fun! Hahaha!
                             </p>
                             <div class="flex justify-center">
-                                <a href="https://colab.research.google.com/drive/1EvZezUShOoJDgZOz7cDiTZjiu6n6k7r8#scrollTo=996CY7ePxru2"
+                                <a href="https://drive.google.com/file/d/1xvNdCEx8X0AaA29OsEgnpUsoFjmyam0F/view?usp=sharing"
                                     target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
@@ -636,7 +644,8 @@
                                     Wheater Aus
                                 </a>
                             </h3>
-                            <p class="text-base text-body-color leading-relaxed mb-5">I predicted the weather in Australia, up to a year ahead. Got 90% accuracy!</p>
+                            <p class="text-base text-body-color leading-relaxed mb-5">I predicted the weather in
+                                Australia, up to a year ahead. Got 90% accuracy!</p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/172pckXzs-l4wi2lK2ekTO6GvUpPyOGVj"
                                     target="_blank"
@@ -720,8 +729,8 @@
 
 
     <!-- Archievement -->
-    <div
-        class="container relative mt-10 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="fade-right" data-aos-duration="1000">
+    <div class="container relative mt-10 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+        data-aos="fade-right" data-aos-duration="1000">
         <section class="w-full">
             <div class="circle circle-3 hidden md:block absolute z-1"></div>
             <h2 class="secondary-title" id="archievement">Archievement</h2>
@@ -742,8 +751,10 @@
                             <div class="badge">AI</div>
                             <div class="bagde mt-1">Artificial Intelegent</div>
                         </div>
-                        <p class="text-secondary">1st place in the LKS wilker race in the field of artificial
+                        <p class="text-secondary mb-4">1st place in the LKS wilker race in the field of artificial
                             intelligence competition in 2022</p>
+                            <a href="https://drive.google.com/file/d/1v1Yrcw4Jndd01qo6HzCnJz8FhKXEPcSG/view?usp=sharing"
+                            target="_blank" class="border-2 rounded-full font-bold py-2 px-4 mt-10 hover:bg-white hover:text-black">view sertificate</a>
                     </div>
                 </div>
             </div>
@@ -759,16 +770,20 @@
                         <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
                             <div class="badge">APPS</div>
                         </div>
-                        <p class="text-secondary">1st place in the race held by Dinacom in the field of app development
+                        <p class="text-secondary mb-4">1st place in the race held by Dinacom in the field of app development
                         </p>
+                        <a href="https://drive.google.com/file/d/1mo1VCPlxATCxWcR1oV5KCva9eOG9RZcD/view?usp=sharing"
+                            target="_blank" class="border-2 rounded-full font-bold py-2 px-4 mt-10 hover:bg-white hover:text-black">view sertificate</a>
                     </div>
                 </div>
             </div>
-        </section>
+    </div>
+    </section>
     </div>
 
     <!-- hire me -->
-    <div class="container relative mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="zoom-in" data-aos-duration="1000">
+    <div class="container relative mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+        data-aos="zoom-in" data-aos-duration="1000">
         <section class="w-full">
             <div class="hidden md:block circle circle-2 absolute z-1"></div>
             <h2 id="hire" class="secondary-title">Hire me</h2>
